fixed text overflow

--- a/modules/category-menu.css
+++ b/modules/category-menu.css
@@ -207,6 +207,9 @@
 	  
 	.nav-tabs {
 	  justify-content: flex-start;
+	  -ms-overflow-style: none !important;  
+	  scrollbar-width: none !important;  
+					
 	}
   
 	.nav > li > a {
@@ -281,6 +284,8 @@
 		  }
   }
   
+ 
+  
   @media only screen and (max-width: 320px) {
 
 	.menu-content-right {
@@ -308,11 +313,7 @@
 	  width: 100%;
 	}
 	
-		/* Hide scrollbar for IE, Edge and Firefox */
-		.nav.nav-tabs.justify-content-center.category-tabs {
-			-ms-overflow-style: none;  /* IE and Edge */
-			scrollbar-width: none;  /* Firefox */
-		  }
+
 	
 }
 
