--- a/modules/newsletter.css
+++ b/modules/newsletter.css
@@ -89,7 +89,7 @@
 	}
 	.newsletter-title.title-color {
 		font-size: 42px !important;
-		white-space: nowrap !important;
+		
 	  }
 	  .sub-title-color {
 		font-size: 28px;
